/**
 * Classe représentant un sas de sortie.
 *
 * @author Kurth Claire et Dallé Victor
 * @since 02/02/2022
 */

package twisk.monde;

public class SasSortie extends Activite {

    /**
     * Constructeur par défaut de la classe.
     */
    public SasSortie() {
        super("sortie");
    }

    /**
     * Méthode définissant le code c à ajouter pour un sas de sortie.
     *
     * @return Le code c.
     */
    @Override
    public String toC() {
        return "";
    }
}
