@startuml
package twisk {
    class ClientTwisk {
        + Monde monde1()
        + Monde monde2()
        + void main(String[] args)
    }

    interface Iterable<Etape> {
        + Iterator<Etape> iterator()
    }

    interface Comparable<Etape>{
    }

    package monde {
        abstract class Etape {
            # int numEtape
            # String nom
            .. Constructeur ..
            + Etape(String nom)
            .. Getters ..
            + int nbSuccesseurs()
            + boolean estUneActivite()
            + boolean estUnGuichet()
            + boolean estUneSortie()
            + String getNom()
            + int getNumEtape()
            + Etape getSuccesseur()
            + {abstract} int getNbJetons()
            .. Setters ..
            + void ajouterSuccesseur(Etape... etapes)
            + {abstract} void setSemaphoreGuichet(int semaphore)
            .. Autres méthodes ..
            + Iterator<Etape> iterator()
            + String toString()
            + {abstract} String toC()
            + int compareTo(Etape o)

        }

        class Activite {
            # int temps
            # int ecartTemps
            .. Constructeurs ..
            + Activite(String nom)
            + Activite(String nom, int t, int e)
            .. Getters ..
            + boolean estUneActivite()
            + int getNbJetons()
            .. Autres méthodes ..
            + String toC()
        }

        class ActiviteRestreinte {
            - int numSemGuichet
            .. Constructeurs ..
            + ActiviteRestreinte(String nom)
            + ActiviteRestreinte(String nom, int t, int e)
            .. Setter ..
            + void setSemaphoreGuichet(int semaphore)
            .. Getter ..
            + int getNumSemGuichet() {
            .. Autres méthodes ..
            + String toC()
        }

        class GestionnaireEtapes {
            .. Constructeur ..
            + GestionnaireEtapes()
            .. Getters ..
            + int nbEtapes()
            + Etape getEtape(int i)
            .. Setters ..
            + void ajouter((Etape... etapes)
            .. Autres méthodes ..
            + Iterator<Etape> iterator()
            + String toString()
        }

        class GestionnaireSuccesseur {
            .. Constructeur ..
            + GestionnaireSuccesseur()
            .. Getters ..
            + int nbEtapes()
            + Etape getEtape()
            + Etape getSucc()
            .. Setters ..
            + void ajouter((Etape... etapes)
            .. Autres méthodes ..
            + Iterator<Etape> iterator()
            + String toString()
        }

        class Guichet {
            # int nbJetons
            # int numSemaphore
            .. Constructeurs ..
            + Guichet(String nom)
            + Guichet(String nom, int nb)
            .. Getters ..
            + boolean estUnGuichet()
            + int getNbJetons()
            + int getNumSemaphore()
            .. Autres méthodes ..
            + String toC()
            + void ajouterSuccesseur(Etape... etapes)
        }

        class Monde {
            .. Constructeur ..
            + Monde()
            .. Getters ..
            + int nbEtapes()
            + int nbGuichets()
            + Etape getSasEntree()
            + Etape getSasSortie()
            .. Setters ..
            + void aCommeEntree(Etape... etapes)
            + void aCommeSortie(Etape... etapes)
            + void ajouter(Etape... etapes)
            .. Autres méthodes ..
            + Iterator<Etape> iterator()
            + String toString()
            + String toC()
        }

        class SasEntree {
            .. Constructeur ..
            + SasEntree()
            .. Autres méthodes ..
            + String toC()
        }

        class SasSortie {
            .. Constructeur ..
            + SasSortie()
            .. Autres méthodes ..
            + String toC()
        }
    }

    package outils {
        class FabriqueNumero {
            - int cptEtape
            - int cptSemaphore
            .. Constructeur ..
            - FabriqueNumero()
            .. Getters ..
            + FabriqueNumero getInstance()
            + int getNumeroEtape()
            + int getNumeroSemaphore()
            .. Setter ..
            + void reset()
        }

        class KitC {
            .. Constructeur ..
            + KitC()
            .. Autres méthodes ..
            + void creerEnvironnement()
            + void copier(InputStream source, File dest)
            + void creerFichier(String codeC)
            + void compiler()
            + void construireLaLibrairie()
        }
    }

    package ressources {
        class "Code C" << (R,#FF7700) Fichier >>
    }

    package simulation {
        class Simulation {
            - int nbClients
            .. Constructeur ..
            + Simulation()
            .. Setter ..
            + void setNbClients(int nb)
            .. Autres méthodes ..
            + int[] start_simulation(int nbEtapes, int nbGuichets, int nbClients, int[] tabJetonsGuichet)
            + void nettoyage()
            + int[] ou_sont_les_clients(int nbEtapes, int nbClients)
            + int[] clientsConcernes(int[] tab, int depart, int arrivee)
            + void simuler(Monde monde)
        }
    }
}

FabriqueNumero --"1" FabriqueNumero : static instance
Simulation -right--"1" KitC
Etape .up.|> Iterable
Activite -up-|> Etape
ActiviteRestreinte -up-|> Activite
GestionnaireEtapes .up.|> Iterable
GestionnaireSuccesseur .up.|> Iterable
Guichet -up-|> Etape
Monde .up.|> Iterable
SasEntree -up-|> Activite
SasSortie -up-|> Activite
SasSortie "1"-up-- Monde
SasEntree "1"-up-- Monde
Monde -right--"1"GestionnaireEtapes
GestionnaireEtapes -left--"*" Etape
GestionnaireSuccesseur "1"-right--"*" Etape
Etape .right.|> Comparable
@enduml
